--- a/simulador.html
+++ b/simulador.html
@@ -34,6 +34,31 @@
         max-width: 110px;
       }
     }
+    /* Animação dinheiro voando */
+    .dinheiro-voando {
+      pointer-events: none;
+      position: fixed;
+      left: 50%;
+      top: 60%;
+      z-index: 9999;
+      width: 60px;
+      height: 60px;
+      opacity: 0.85;
+      animation: voar 1.2s linear forwards;
+    }
+    @keyframes voar {
+      0% {
+        transform: translate(-50%, 0) scale(1) rotate(-10deg);
+        opacity: 0.9;
+      }
+      60% {
+        opacity: 1;
+      }
+      100% {
+        transform: translate(-50%, -350px) scale(1.2) rotate(25deg);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -64,17 +89,17 @@
       </div>
     </div>
   </div>
+  <!-- Áudio moedas -->
+  <audio id="moeda-audio" src="moeda.mp3" preload="auto"></audio>
   <script>
     const valorRange = document.getElementById('valor-range');
     const valorMostrado = document.getElementById('valor-mostrado');
 
-    // Formata valor para pt-BR
     function formatarValor(valor) {
       if (!valor || isNaN(valor)) return '';
       return Number(valor).toLocaleString('pt-BR', {minimumFractionDigits: 2});
     }
 
-    // Atualiza input ao mover o range
     function atualizarInput(valor) {
       valorMostrado.value = formatarValor(valor);
     }
@@ -84,10 +109,9 @@
       atualizarInput(valorRange.value);
     });
 
-    // Permite apagar tudo e digitar livremente, sem forçar formatação enquanto digita
     valorMostrado.addEventListener('input', () => {
       let val = valorMostrado.value.replace(/[^\d,]/g, '').replace(/\./g, '').replace(',', '.');
-      if (val === '') return; // permite apagar tudo
+      if (val === '') return;
       let num = parseFloat(val);
       if (!isNaN(num)) {
         num = Math.max(1000, Math.min(150000, num));
@@ -95,7 +119,6 @@
       }
     });
 
-    // Ao sair do input, formata corretamente
     valorMostrado.addEventListener('blur', () => {
       let val = valorMostrado.value.replace(/[^\d,]/g, '').replace(/\./g, '').replace(',', '.');
       let num = parseFloat(val);
@@ -108,6 +131,23 @@
       }
     });
 
+    // Animação dinheiro voando
+    function animarDinheiro() {
+      for (let i = 0; i < 8; i++) {
+        setTimeout(() => {
+          const img = document.createElement('img');
+          img.src = 'dinheiro.png'; // Use uma imagem de dinheiro/moeda (adicione na pasta do projeto)
+          img.className = 'dinheiro-voando';
+          img.style.left = (45 + Math.random() * 10) + '%';
+          img.style.top = (60 + Math.random() * 10) + '%';
+          img.style.width = (40 + Math.random() * 30) + 'px';
+          img.style.animationDuration = (1.2 + Math.random() * 0.7) + 's';
+          document.body.appendChild(img);
+          setTimeout(() => img.remove(), 2000);
+        }, i * 120);
+      }
+    }
+
     document.getElementById('btn-valor').addEventListener('click', function (e) {
       e.preventDefault();
       let val = valorMostrado.value.replace(/[^\d,]/g, '').replace(/\./g, '').replace(',', '.');
@@ -116,8 +156,19 @@
         valorMostrado.focus();
         return;
       }
-      localStorage.setItem('valorEmprestimo', num);
-      window.location.href = 'email.html';
+
+      // Animação e som
+      animarDinheiro();
+      const audio = document.getElementById('moeda-audio');
+      if (audio) {
+        audio.currentTime = 0;
+        audio.play();
+      }
+
+      setTimeout(() => {
+        localStorage.setItem('valorEmprestimo', num);
+        window.location.href = 'email.html';
+      }, 3000);
     });
   </script>
 </body>
