--- a/continuar.html
+++ b/continuar.html
@@ -58,7 +58,7 @@
       </div>
     </div>
   </div>
-  <audio id="audio-comemora" src="https://cdn.pixabay.com/audio/2022/07/26/audio_124bfa4c3b.mp3" preload="auto"></audio>
+  <audio id="audio-comemora" src="celebracao.mp3" preload="auto"></audio>
   <script>
     function soltarConfete() {
       const colors = ['#FFD700', '#FF69B4', '#00CFFF', '#43E97B', '#FF8C00', '#B266FF', '#FF4040'];
